Fixed Spacing

--- a/src/components/MarkdownPreviewer.css
+++ b/src/components/MarkdownPreviewer.css
@@ -66,7 +66,7 @@ background-color: #DEF2F1;
 height: 90%;
 width: 90%;
 resize: none;
-font-size: 1.4vh;
+font-size: 1.5vh;
 }
 
 #preview-container {
@@ -83,9 +83,9 @@ width: 100%;
 overflow-y: scroll
 }
 
-@media only screen and (max-width: 900px) and (min-width: 600px) {
+@media only screen and (max-width: 1250px) and (min-width: 600px) {
     #editor {
-        font-size: 1.2vh;
+        font-size: 1.3vh;
     }
 }
 
